fixed issue with closing navbar on mobile and disappearing from desktop

--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -16,7 +16,8 @@
     padding-left: 20px;
 }
 
-.nav-links-container {
+.nav-links-container,
+.nav-links-container-mobile {
     width: 300px;
     display: flex;
     justify-content: space-between;
@@ -65,7 +66,11 @@
         right: 60px;
     }
 
-    .nav-links-container {
+    .nav-links-container{
+        display: none;
+    }
+    
+    .nav-links-container-mobile {
         flex-direction: column;
         height: 100vh;
         width: 100%;
